* v2.5.7.1
  * fixed copyright note in the License file
  * improved problem reporting in module:program

* v2.5.7
  * added 'ck_html_end_note' key to customize CK result dashboard
  * fixed Pareto frontier filter
  * added "ck filter_2d math.frontier" for MLPerf inference

* v2.5.6
  * added --j flag to "ck install package" to update CK_HOST_CPU_NUMBER_OF_PROCESSORS env 
    and force number of processes in "make -j" if used by a given package
  * added ck.cfg key "pip_user". If yes, add --user when to pip 
    when installing CK repositories.
    Turn it on as follows:
    $ ck set kernel var.pip_user=yes
    See ticket #157
  * print path to the CK kernel when invoking "ck"
  * extended "result" module to use meta.json as a base for all sub configurations
    (to simplify configuration for multiple dashboards - useful for MLPerf)

* v2.5.5
  * added result.cfg to configure CK dashboards
  * improved module:result to push results to CK dashboards
  * improved module:dashboard to work with new CK dashboards
  * improved module:wfe to work with new CK dashboards
  * added module:ck-platform to work with cKnowledge.io platform
    (moved cbench functionality from the CK incubator to the CK module
     to work with cKnowledge.io dashboards directly)
  * provided better support to work with CK modules
    as standard Python packages (see module:ck-platform as example)

* V2.5.4
  * added support to automatically add simple packages from Git:
    ck add package:my-git-repo --git={URL} --tags=my-repo --env_ext=MY_GIT_REPO
  * added module:mlperf.result to abstract official MLPerf results
  * added key "skip_global_deps" to program meta to skip global dependencies
    for a given command line (for example, only to install python deps
    for a given program)
  * improved handling of a situation when CK environment has changed
    and make it possible to continue running a workflow at user risk
    (useful for debugging)

* V2.5.3